# discord-mentionbot

./: .gitignore  Cargo.toml  README.md  TEMP_help_admin.txt  classdiagram.xml  clientextended.py  design_notes.txt  enums.py  errors.py  helpmessages.py  issues.txt  mentionbot.py  mentionsummarycache.py  modularizedservermodule.py  privilegemanager.py  run.py  serverbotinstance.py  servermodule.py  servermodulefactory.py  servermodulegroup.py  servermoduleresources.py  serverpersistentstorage.py  utils.py
helpmessages/: help.txt  help_mentions_notify.txt  help_mentions_search.txt  help_mentions_summary.txt  helpmessages.py
mentionbot/: attributedictwrapper.py  clientextended.py  cmd.py  defaultjson.py  enums.py  errors.py  helpnode.py  mentionbot.py  messagecache.py  modularizedservermodule.py  privilegemanager.py  serverbotinstance.py  servermodule.py  servermodulefactory.py  servermodulegroup.py  servermoduleresources.py  servermodulewrapper.py  serverpersistentstorage.py  utils.py
mentionbot/servermodules/: basicinfo.py  bsistarkravingmadbot.py  customcmd.py  debugging.py  dynamicchannels.py  jcfdiscord.py  mentionsnotify.py  misc.py  pmgreetings.py  random.py  selfservecolours.py  serveractivitystatistics.py  servergreetings.py  (+4 more)
mentions/: mentionsummarycache.py  notify.py  search.py  summary.py
servermodules/: basicinfo.py  bsistarkravingmadbot.py  dynamicchannels.py  jcfdiscord.py  random.py  servermodule.py  wolframalpha.py
src/: main.rs
temporary/: attributedictwrapper.py  errorreportholder.py  messagecache.py  pmchannelinfo.py  truthgame.py  voting.py
(+16 files in other folders)
